--- a/language/fr-FR/mod_cgchat.ini
+++ b/language/fr-FR/mod_cgchat.ini
@@ -1,4 +1,4 @@
-﻿MOD_CGCHAT_DESC="Module CG Chat"
+MOD_CGCHAT_DESC="Module CG Chat"
 MOD_CGCHAT="CG Chat"
 MOD_CGCHAT_CACHING_LABEL="Cache"
 MOD_CGCHAT_CACHING_DESC="Selectionnez l'option de gestion du cache."
